src/objects/Apttus__IDEMapProvisionRecordType__c.object
<CustomObject>
    <description>Holds the mapping between IDE provision and the record type</description>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The mapping description</description>
        <inlineHelpText>The mapping description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__IDEProvisionId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>ID of the associated IDE provision</description>
        <inlineHelpText>ID of the associated IDE provision</inlineHelpText>
        <label>IDE Provision</label>
        <referenceTo>Apttus__IDEProvision__c</referenceTo>
        <relationshipLabel>IDE Map Provision Record Types</relationshipLabel>
        <relationshipName>IDEMapProvisionRecordTypes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__RecordTypeName__c</fullName>
        <description>The name of the associated record type</description>
        <externalId>true</externalId>
        <inlineHelpText>The name of the associated record type</inlineHelpText>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IDE Map Provision Record Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDE Map Provision Record Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>